--- a/app/views/antigen/v1/global-registration/address.html
+++ b/app/views/antigen/v1/global-registration/address.html
@@ -29,7 +29,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="post-code-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-              {{ pageTitle }}
+              What is the home address registered with {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s GP?
             </h1>
           </legend>
           <span id="post-code-hint" class="govuk-body">
