--- a/app/views/antigen/v1/global-registration/institution-person-1.html
+++ b/app/views/antigen/v1/global-registration/institution-person-1.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Enter the details of this of this place" %}
+{% set pageTitle = "Enter the details of this place" %}
 
 {% extends "includes/layout.html" %}
 
@@ -27,20 +27,20 @@
       <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper govuk-!-margin-bottom-8">
           <label class="govuk-label govuk-label--xl" for="institution">
-            Enter the details of this of this place
+            {{ pageTitle }}
           </label>
         </h1>
         <span id="institution-hint" class="govuk-body">
-          This will help us learn about the type of places where the virus spreads. It will also help contact tracers
+          This will help us learn about the type of places where the virus spreads. It will also help contact tracers.
         </span>
         <label class="govuk-label govuk-!-margin-top-4" for="name">
           Name of the nursery, school or college
         </label>
-        <input class="govuk-input govuk-!-width-two-thirds" id="name" name="name" type="text" value="{{ data['name'] }}">
-        <label class="govuk-label">
+        <input class="govuk-input govuk-!-width-two-thirds" id="name" name="name" type="text" value="{{ data['name-person-1'] }}">
+        <label class="govuk-label govuk-!-margin-top-3">
           Town
         </label>
-        <input class="govuk-input govuk-!-width-two-thirds" id="town" name="town" type="text" value="{{ data['town'] }}">
+        <input class="govuk-input govuk-!-width-two-thirds" id="town" name="town" type="text" value="{{ data['town-person-1'] }}">
 
       </div>
 
@@ -49,7 +49,7 @@
       </button>
     </form>
 
-    <a class="govuk-link" href="/antigen/{{version}}/global-registration/country">Prefer not to say</a>
+    <a class="govuk-link" href="/antigen/{{version}}/global-registration/country-person-1">Prefer not to say</a>
 
   </div>
 </div>
