--- a/app/views/antigen/v1/global-registration/institution.html
+++ b/app/views/antigen/v1/global-registration/institution.html
@@ -27,17 +27,17 @@
       <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper govuk-!-margin-bottom-8">
           <label class="govuk-label govuk-label--xl" for="institution">
-            Enter the details of this of this place
+            {{ pageTitle }}
           </label>
         </h1>
         <span id="institution-hint" class="govuk-body">
-          This will help us learn about the type of places where the virus spreads. It will also help contact tracers
+          This will help us learn about the type of places where the virus spreads. It will also help contact tracers.
         </span>
         <label class="govuk-label govuk-!-margin-top-4" for="name">
           Name of the nursery, school or college
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="name" name="name" type="text" value="{{ data['name'] }}">
-        <label class="govuk-label">
+        <label class="govuk-label govuk-!-margin-top-3">
           Town
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="town" name="town" type="text" value="{{ data['town'] }}">
