--- a/app/views/antigen/v1/global-registration/nhs-number.html
+++ b/app/views/antigen/v1/global-registration/nhs-number.html
@@ -29,7 +29,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="nhs-number-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-              {{ pageTitle }}
+              What's {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s NHS number?
             </h1>
           </legend>
           <span id="nhs-number-hint" class="govuk-body">
