--- a/app/views/antigen/v1/global-registration/study-grade.html
+++ b/app/views/antigen/v1/global-registration/study-grade.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/ethnic-group">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/work-or-study">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="study-grade-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+                Which place does {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }} attend?
               </h1>
             </legend>
             <div class="govuk-radios govuk-!-margin-top-5">
