--- a/app/views/antigen/v1/global-registration/vaccine-date.html
+++ b/app/views/antigen/v1/global-registration/vaccine-date.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="vaccine-date-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-              {{ pageTitle }}
+                When did {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} have the vaccine?
               </h1>
             </legend>
             <span id="vaccine-date-hint" class="govuk-body">
