--- a/app/views/antigen/v1/global-registration/work-or-study.html
+++ b/app/views/antigen/v1/global-registration/work-or-study.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="work-or-study-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+                Does {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} travel to nursery, work or a place of education?
               </h1>
             </legend>
             <span id="work-or-study-hint" class="govuk-body">
