--- a/app/views/antigen/v1/govuk/get-coronavirus-test.html
+++ b/app/views/antigen/v1/govuk/get-coronavirus-test.html
@@ -198,11 +198,11 @@
 
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Order or book a test by phone</h2>
 
-                    <p class="govuk-body govuk-!-margin-top-6">If you have problems or cannot use the online service, call:</p>
-                    <ul class="govuk-list govuk-list--bullet">
+                    <p class="govuk-body govuk-!-margin-top-6">If you have problems or cannot use the online service, call 119.</p>
+                    <!-- <ul class="govuk-list govuk-list--bullet">
                         <li>119 if you’re in England, Wales or Northern Ireland</li>
                         <li>0300 303 2713 if you’re in Scotland</li>
-                    </ul>
+                    </ul> -->
                     <p class="govuk-body">Lines are open 7am to 11pm.</p>
 
                     <div style="border-left: 10px solid #b1b4b6;" class="govuk-!-margin-top-6">
@@ -220,7 +220,7 @@
                     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-7">If you need medical advice about your symptoms</h2>
                     <p class="govuk-body">Get help at:</p>
                     <ul class="govuk-list govuk-list--bullet">
-                        <li><a href="#">England: NHS 111 online coronavirus service</a></li>
+                        <li><a href="#">England: NHS 111 online COVID-19 service</a></li>
                         <li><a href="#">Scotland: NHS inform</a></li>
                         <li><a href="#">Wales: NHS 111 Wales</a></li>
                         <li>Northern Ireland: get advice from a GP or GP out-of-hours service</li>
