--- a/app/views/antigen/v1/refer-and-triage/cannot-have-test.html
+++ b/app/views/antigen/v1/refer-and-triage/cannot-have-test.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "You cannot have a coronavirus test at this time" %}
+{% set pageTitle = "You're not eligible for a PCR test" %}
 
 {% extends "includes/layout.html" %}
 
@@ -17,44 +17,42 @@
 {% endblock %}
 
 {% block content %}
-{% include "includes/gtm-noscript.html" %}
+  {% include "includes/gtm-noscript.html" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">{{ pageTitle }}</h1>
-
-        <p class="govuk-body">We can only give tests to people with symptoms and people who have been asked to get tested. That's because there's a limited number of tests available right now.</p>
-        <p class="govuk-body">Also, you may not be able to get a test if your symptoms started too long ago.</p>
-
-        <h2 class="govuk-heading-m">Get advice on what to do next</h2>
-
-        <p class="govuk-body">If one of these situations applies to you, there are steps you can take to look after yourself and others.</p>
-
-        <h2 class="govuk-heading-m">I’ve been notified by NHS Test and Trace that I’m a contact of someone who has tested positive for coronavirus but I do not have symptoms</h2>
-        <p class="govuk-body">You need to self-isolate immediately for 10 days. This includes the day you were in contact with that person and the next 10 full days.</p>
-        <p class="govuk-body">Read more advice about <a class="govuk-link" href="#">when to self-isolate and what to do.</a></p>
-        <p class='govuk-body'>You do not need a coronavirus test unless you go on to get symptoms.</p>
-
-        <h2 class="govuk-heading-m">I'm planning to visit someone at higher risk from coronavirus and want to make sure I do not have the virus</h2>
-        <p class='govuk-body'>Avoid close contact with this person.</p>
-        <p class='govuk-body'>Wash your hands regularly, use a face covering when social distancing is not possible, and try to keep your distance from them.</p>
-        <p class='govuk-body'>Find out more about <a class="govuk-link" href="#">social distancing: what you need to do.</a></p>
-        <p class='govuk-body'>You can also <a class="govuk-link" href="#">read advice for people at high risk from coronavirus.</a></p>
-
-        <h2 class="govuk-heading-m">My employer or school has told me to get a test even though I do not have symptoms</h2>
-        <p class='govuk-body'>If your employer or school has asked you to get tested, and you do not have symptoms, you can pay for a private test.</p>
-        <p class='govuk-body'>In this case, you cannot use this free service to get a test.</p>
-
-        <h2 class="govuk-heading-m">I need to get a test to travel to another country</h2>
-        <p class='govuk-body'>If your travel company has asked you to get tested, and you do not have symptoms, you can pay for a private test.</p>
-        <p class='govuk-body'>In this case, you cannot use this free service to get a test.</p>
-        
-        <h2 class="govuk-heading-m">I have arrived in the UK from another country and I need to get a test to stop self-isolating</h2>
-        <p class='govuk-body'>Under the <a class="govuk-link" href="#">Test to Release for international travel scheme</a> in England, you can choose to pay for a private coronavirus test. If the result is negative you can stop self-isolating. You cannot use a free NHS coronavirus test to shorten your isolation.</p>
+        <p class="govuk-body">
+          ‘PCR tests’ are mainly for people who have coronavirus symptoms.<br><br>
+          You have told us one of the following:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>you do not have symptoms and are not eligible for a PCR test for other reasons</li>
+          <li>your symptoms started too long ago</li>
+        </ul>
+      
+        <h2 class="govuk-heading-m">Getting tested if you have no symptoms</h2>
+        <p class="govuk-body">
+          You can get a rapid lateral flow test if you do not have symptoms.<br><br>
+          This test is free and you get a result 30 minutes after taking the test.<br><br>
+          Find out how to get a test in your area:
+        </p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="https://www.gov.uk/getting-tested-for-coronavirus" target="blank" class="govuk-link">England</a></li>
+          <li><a href="https://www.gov.scot/communitytesting" target="blank" class="govuk-link">Scotland</a></li>
+          <li><a href="https://www.gov.wales/rapidtesting" target="blank" class="govuk-link">Wales</a></li>
+          <li><a href="https://www.health-ni.gov.uk/workforce-testing" target="blank" class="govuk-link">Northern Ireland</a></li>
+        </ul>
+      
+        <h2 class="govuk-heading-m">Getting tested if you're travelling to another country</h2>
+        <p class="govuk-body">
+          If your travel company has asked you to get tested, and you do not have symptoms, you can <a class="govuk-link" target="blank" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/979933/covid-private-testing-providers-general-testing-230421.csv/preview">pay for a private test</a>.
+        </p>
 
     </div>
   </div>
 
 {% endblock %}
+
 
