--- a/app/views/antigen/v1/refer-and-triage/do-you-have-a-car.html
+++ b/app/views/antigen/v1/refer-and-triage/do-you-have-a-car.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-{% include "includes/gtm-noscript.html" %}
+  {% include "includes/gtm-noscript.html" %}
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -29,14 +29,14 @@
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="do-you-have-a-car-hint">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
+                        <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
                             {{ pageTitle }}
                         </h1>
                     </legend>
                     <span id="do-you-have-a-car-hint" class="govuk-body">
                         We are asking this so we can include a drive-through test as one of your options.<br><br>
                         You can still choose a walk-through test or a home test if you prefer.<br><br>
-                        It's safe to visit a drive-through test site if youre self-isolating.
+                        It's safe to visit a drive-through test site if you’re self-isolating.
                     </span>
                     <div class="govuk-radios govuk-!-margin-top-5">
                         <div class="govuk-radios__item">
