--- a/app/views/antigen/v1/refer-and-triage/how-will-you-get-test.html
+++ b/app/views/antigen/v1/refer-and-triage/how-will-you-get-test.html
@@ -27,7 +27,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="drive-through-1-hint drive-through-2-hint drive-through-3-hint drive-through-4-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">
                 {{ pageTitle }}
               </h1>
             </legend>
@@ -48,6 +48,7 @@
                 <label class="govuk-label govuk-radios__label" for="way-to-test-1">
                   <span  class="govuk-body-l"><strong>At a drive-through test site</strong></span>
                 </label>
+                <div style="margin-left: -40px" class="govuk-!-margin-top-3">
                   <ul class="govuk-list govuk-list--bullet">
                     <li><span id="drive-through-1-hint">you need to book your test as soon as possible</span></li>
                     <li><span id="drive-through-2-hint">you or someone you live with must drive to the test site by car, small van or motorbike (some sites do not accept motorbikes)</span></li>
@@ -61,6 +62,7 @@
                     <strong>3.6 miles</strong> by road<br><br>
                     179 appointments available.
                   </span>
+                </div>
               </div>
               {% endif %}
               {% if data['home-postcode'] !== "N000" %}
@@ -69,6 +71,7 @@
                 <label class="govuk-label govuk-radios__label" for="way-to-test-2">
                   <span class="govuk-body-l"><strong>At a walk-through test site</strong></span>
                 </label>
+                <div style="margin-left: -40px" class="govuk-!-margin-top-3">
                 <ul class="govuk-list govuk-list--bullet">
                   <li><span id="walk-in-1-hint">you need to book your test slot as soon as possible</span></li>
                   <li><span id="walk-in-2-hint">do not travel to the test site by public transport or taxi</span></li>
@@ -83,6 +86,7 @@
                     <strong>2.6 miles</strong> by road<br><br>
                     208 appointments available.
                   </span>
+                </div>
               </div>
               {% endif %}
               <div class="govuk-radios__item govuk-!-margin-top-6">
@@ -90,11 +94,13 @@
                 <label class="govuk-label govuk-radios__label" for="way-to-test-3">
                   <span  class="govuk-body-l"><strong>Home testing</strong></span>
                 </label>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li><span id="home-testing-1-hint">you can get a test kit for yourself and up to 3 other people you live with</span></li>
-                  <li><span id="home-testing-2-hint">it is posted to your home and should arrive the day after you order it</span></li>
-                  <li><span id="home-testing-3-hint">it’s important that you return your test as soon as possible after doing it</span></li>
-                </ul>
+                <div style="margin-left: -40px" class="govuk-!-margin-top-3">
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li><span id="home-testing-1-hint">you can get a test kit for yourself and up to 3 other people you live with</span></li>
+                    <li><span id="home-testing-2-hint">it is posted to your home and should arrive the day after you order it</span></li>
+                    <li><span id="home-testing-3-hint">it’s important that you return your test as soon as possible after doing it</span></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </fieldset>
