--- a/app/views/antigen/v2/global-registration/landline-number.html
+++ b/app/views/antigen/v2/global-registration/landline-number.html
@@ -15,10 +15,7 @@
     </p>
   </div> 
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/">Back</a>
 
 {% endblock %}
 
@@ -34,7 +31,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="landline-number-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-                {{ pageTitle }}
+                Does {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }} have a landline phone number?
               </h1>
             </legend>
             <span id="landline-number-hint" class="govuk-body">
