--- a/app/views/antigen/v2/global-registration/occupation.html
+++ b/app/views/antigen/v2/global-registration/occupation.html
@@ -23,11 +23,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="/genomic-variants/1-have-you-travelled-overseas" method="post">
+    <form class="form" action="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas" method="post">
       <div class="govuk-form-group govuk-!-margin-bottom-0">
         <h1 class="govuk-label-wrapper govuk-!-margin-bottom-8">
           <label class="govuk-label govuk-label--xl" for="occupation">
-            {{ pageTitle }}
+            Enter {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s work details
           </label>
         </h1>
         <span id="occupation-hint" class="govuk-body">
@@ -36,7 +36,7 @@
           Start entering an occupation below and select from the options given.<br><br>
           If you cannot see your occupation, try a different word.<br><br>
           If you still cannot see your occupation, enter ‘I cannot find the correct occupation’.<br><br>
-          You do not have to share these details if you do not want to.<br><br><br>
+          You do not have to share these details if you do not want to.<br><br>
         </span>
         <fieldset class="govuk-fieldset">
 					<label class="govuk-label" for="occupation-autocomplete">
@@ -56,7 +56,7 @@
         Continue
       </button>
       <br>
-      <a class="govuk-link" href="/genomic-variants/1-have-you-travelled-overseas">Prefer not to say</a>
+      <a class="govuk-link" href="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas">Prefer not to say</a>
     </form>
 
   </div>
