--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -47,6 +47,34 @@
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Appleseed' }}</th>
             <td class="govuk-table__cell">
+              {% if data['date-of-birth-month'] == "1" or data['date-of-birth-month'] == "01" %}
+              {{ data['date-of-birth-day'] }} January {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "2" or data['date-of-birth-month'] == "02" %}
+              {{ data['date-of-birth-day'] }} February {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "3" or data['date-of-birth-month'] == "03" %}
+              {{ data['date-of-birth-day'] }} March {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "4" or data['date-of-birth-month'] == "04" %}
+              {{ data['date-of-birth-day'] }} April {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "5" or data['date-of-birth-month'] == "05" %}
+              {{ data['date-of-birth-day'] }} May {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "6" or data['date-of-birth-month'] == "06" %}
+              {{ data['date-of-birth-day'] }} June {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "7" or data['date-of-birth-month'] == "07" %}
+              {{ data['date-of-birth-day'] }} July {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "8" or data['date-of-birth-month'] == "08" %}
+              {{ data['date-of-birth-day'] }} August {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "9" or data['date-of-birth-month'] == "09" %}
+              {{ data['date-of-birth-day'] }} September {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "10" %}
+              {{ data['date-of-birth-day'] }} October {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "11" %}
+              {{ data['date-of-birth-day'] }} November {{ data['date-of-birth-year'] }}
+              {% elseif data['date-of-birth-month'] == "12" %}
+              {{ data['date-of-birth-day'] }} December {{ data['date-of-birth-year'] }}
+              {% else %}
+              6 December 1976
+              {% endif %}
+              <br>
               {{ data['email-address'] or 'email@example.com' }}
               <br>
               {{ data['mobile-phone-number'] or '+447782808451' }}
@@ -56,11 +84,42 @@
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header">{{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}</th>
             <td class="govuk-table__cell">
+              {% if data['date-of-birth-person-1-month'] == "1" or data['date-of-birth-person-1-month'] == "01" %}
+              {{ data['date-of-birth-person-1-day'] }} January {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "2" or data['date-of-birth-person-1-month'] == "02" %}
+              {{ data['date-of-birth-person-1-day'] }} February {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "3" or data['date-of-birth-person-1-month'] == "03" %}
+              {{ data['date-of-birth-person-1-day'] }} March {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "4" or data['date-of-birth-person-1-month'] == "04" %}
+              {{ data['date-of-birth-person-1-day'] }} April {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "5" or data['date-of-birth-person-1-month'] == "05" %}
+              {{ data['date-of-birth-person-1-day'] }} May {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "6" or data['date-of-birth-person-1-month'] == "06" %}
+              {{ data['date-of-birth-person-1-day'] }} June {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "7" or data['date-of-birth-person-1-month'] == "07" %}
+              {{ data['date-of-birth-person-1-day'] }} July {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "8" or data['date-of-birth-person-1-month'] == "08" %}
+              {{ data['date-of-birth-person-1-day'] }} August {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "9" or data['date-of-birth-person-1-month'] == "09" %}
+              {{ data['date-of-birth-person-1-day'] }} September {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "10" %}
+              {{ data['date-of-birth-person-1-day'] }} October {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "11" %}
+              {{ data['date-of-birth-person-1-day'] }} November {{ data['date-of-birth-person-1-year'] }}
+              {% elseif data['date-of-birth-person-1-month'] == "12" %}
+              {{ data['date-of-birth-person-1-day'] }} December {{ data['date-of-birth-person-1-year'] }}
+              {% else %}
+              15 March 2002
+              {% endif %}
+              <br>
               {{ data['email-address-person-1'] or 'janewilson@email.com' }}
               <br>
               {{ data['mobile-phone-number-person-1'] or '+44663271472' }}
             </td>
-            <td class="govuk-table__cell"><p class="govuk-body-m"><a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a></p></td>
+            <td class="govuk-table__cell"><p class="govuk-body-m">
+              <a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a><br>
+              <a href="/antigen/{{version}}/global-registration/antibody-test-confirmation" class="govuk-link"">Remove</a>
+            </p></td>
           </tr>
         </tbody>
       </table>
@@ -79,7 +138,7 @@
 
       </form>
 
-      <form class="form" action="/antigen/{{version}}/global-registration/fingerprick-test-person-1" method="post" style="display: inline-block;">
+      <form class="form" action="/antigen/{{version}}/order-home-test-kit/" method="post" style="display: inline-block;">
 
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
