--- a/app/views/antigen/v2/order-home-test-kit/confirmation.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation.html
@@ -18,9 +18,6 @@
 
       <p class="govuk-body"><strong>You'll also receive a confirmation email soon which includes your 10-digit order ID. Keep the order ID to hand, you'll need it later.</strong></p>
 
-      <h3 class="govuk-heading-m">Antibody testing</h3>
-      <p class="govuk-body">If you agreed to do antibody testing, you will receive your first kit in the post a couple days after your PCR test has been confirmed positive. The kit contains step-by-step instructions. It is important you do the antibody test <strong>as soon as it arrives</strong> and send it back by post.</p>
-
       <h3 class="govuk-heading-m">What to do when you receive your test kit</h3>
       <p class="govuk-body">Follow the instructions in your test kit. The instructions will tell you:</p>
 
@@ -30,13 +27,22 @@
         <li>how to return your sample</li>
       </ul>
 
-      <div class="govuk-warning-text govuk-!-margin-top-7">
+      <h3 class="govuk-heading-m">Antibody testing</h3>
+      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
+
+      <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text govuk-!-font-size-19">
           <span class="govuk-warning-text__assistive">Warning</span>
           If you have symptoms, you and everyone you live with should <a target="blank" class="govuk-link" href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">self-isolate</a> immediately and not leave home until you get your test results. You can leave home to get or post a test.
         </strong>
-      </div>
+      </div> -->
+
+      <h3 class="govuk-heading-m">Instructions in alternative formats</h3>
+      <p class="govuk-body">
+        <a class="govuk-link" target="blank" href="#">Alternative format instructions</a> are available online.<br><br>
+        Royal National Institute of Blind People (RNIB) can send you braille, audio or large print instructions. <a class="govuk-link" href="#">Order online</a> or call 0303 123 9999 (Monday to Friday 8am to 8pm and Saturday 9am to 1pm).
+      </p>
 
       <h3 class="govuk-heading-m">If you're worried</h3>
       <p class="govuk-body">
@@ -44,14 +50,19 @@
         Only call 111 if you cannot get help online. For a medical emergency, dial 999.
       </p>
 
+      <h3 class="govuk-heading-m">We want to hear from you</h3>
+      <p class="govuk-body">
+        <a class="govuk-link" href="#">What did you think of our service?</a> (takes 3 minutes)
+      </p>
+
     </div>
   </div>
 {% endblock %}
 
 {% block bodyEnd %}
-<div class="proto-action" style="width: 150px;">
+<div class="proto-action big">
   <a href="/antigen/{{version}}/order-home-test-kit/confirmation-email">
-    <div class="proto-action-text govuk-!-margin-left-3">Confirmation email</div>
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Confirmation email</div>
   </a>
 </div>
 {% endblock %}
