--- a/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
+++ b/app/views/antigen/v2/order-home-test-kit/delivery-address-same.html
@@ -15,10 +15,8 @@
     </p>
   </div>
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/order-home-test-kit/">Back</a>
+
 {% endblock %}
 
 {% block content %}
