--- a/app/views/antigen/v2/order-home-test-kit/index.html
+++ b/app/views/antigen/v2/order-home-test-kit/index.html
@@ -22,19 +22,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">We need to ask a few more questions about {{ data['first-name'] | default('John') }} {{ data['last-name'] | default('Appleseed') }}</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">We need to ask a few more questions about {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}</h1>
 
     <p class="govuk-body">This is so we can deliver the test kit to their home.</p>
 
-    {% if data['delivery-address-postcode-antibody'] or data['delivery-address-postcode-antibody-placeholder'] or data['fingerprick-test-person-1'] == "1" or data['fingerprick-test-person-1'] == "1,2" or data['fingerprick-test-person-1'] == "2" %}
-    <a href="/antigen/{{version}}/order-home-test-kit/confirm-email-address" role="button" draggable="false" class="govuk-button govuk-!-margin-top-5 govuk-!-margin-bottom-8" data-module="govuk-button">
-      Continue
-    </a>
-    {% else %}
     <a href="/antigen/{{version}}/order-home-test-kit/delivery-address-same" role="button" draggable="false" class="govuk-button govuk-!-margin-top-5 govuk-!-margin-bottom-8" data-module="govuk-button">
       Continue
     </a>
-    {% endif %}
 
   </div>
 </div>
