--- a/app/views/antigen/v2/refer-and-triage/government-pilot.html
+++ b/app/views/antigen/v2/refer-and-triage/government-pilot.html
@@ -36,7 +36,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="government-pilot-address-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
                 {{ pageTitle }}
               </h1>
             </legend>
@@ -51,27 +51,21 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="professional-pilot-2" name="professional-pilot" type="radio" value="The person is taking part in community testing" {{ checked("professional-pilot", "The person is taking part in community testing") }}>
-                <label class="govuk-label govuk-radios__label" for="professional-pilot-2">
-                  The person is taking part in community testing
-                </label>
-              </div>
-              <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="professional-pilot-3" name="professional-pilot" type="radio" value="The person has been invited to take part in the Contact Testing Study" {{ checked("professional-pilot", "The person has been invited to take part in the Contact Testing Study") }}>
                 <label class="govuk-label govuk-radios__label" for="professional-pilot-3">
                   The person has been invited to take part in the Contact Testing Study
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="professional-pilot-4" name="professional-pilot" type="radio" value="The person is taking a test before a dental procedure (Dental Patient Testing)" {{ checked("professional-pilot", "The person is taking a test before a dental procedure (Dental Patient Testing)") }}>
-                <label class="govuk-label govuk-radios__label" for="professional-pilot-4">
-                  The person is taking a test before a dental procedure (Dental Patient Testing)
+                <input class="govuk-radios__input" id="professional-pilot-2" name="professional-pilot" type="radio" value="The person is attending an event that is part of the Events Research Programme" {{ checked("professional-pilot", "The person is attending an event that is part of the Events Research Programme") }}>
+                <label class="govuk-label govuk-radios__label" for="professional-pilot-2">
+                  The person is attending an event that is part of the Events Research Programme
                 </label>
               </div>
               <p class="govuk-body">Or</p>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="professional-pilot-5" name="professional-pilot" type="radio" value="None of the above" {{ checked("professional-pilot", "None of the above") }}>
-                <label class="govuk-label govuk-radios__label" for="professional-pilot-5">
+                <input class="govuk-radios__input" id="professional-pilot-4" name="professional-pilot" type="radio" value="None of the above" {{ checked("professional-pilot", "None of the above") }}>
+                <label class="govuk-label govuk-radios__label" for="professional-pilot-4">
                   None of the above
                 </label>
               </div>
