--- a/app/views/antigen/v1/global-registration/1-have-you-travelled-overseas.html
+++ b/app/views/antigen/v1/global-registration/1-have-you-travelled-overseas.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Did the person travel to any countries outside of the UK and Ireland within the last 14 days?" %}
+{% set pageTitle = "Did the person travel to any countries outside the UK and Ireland within the last 14 days?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -33,7 +33,7 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                            {{ pageTitle }}
+                            Did {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} travel to any countries outside the UK and Ireland within the last 14 days?
                         </h1>
                     </legend>
                     <span id="travelled-overseas-hint" class="govuk-body">
