--- a/app/views/antigen/v1/global-registration/ethnic-group.html
+++ b/app/views/antigen/v1/global-registration/ethnic-group.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="ethnic-group-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-                {{ pageTitle }}
+                What is {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s ethnic group?
               </h1>
             </legend>
             <span id="ethnic-group-hint" class="govuk-body">
