--- a/app/views/antigen/v1/global-registration/industry.html
+++ b/app/views/antigen/v1/global-registration/industry.html
@@ -15,7 +15,7 @@
     </p>
   </div> 
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/currently-in-work">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/work-or-study">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="industry-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                {{ pageTitle }}
+                Select {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s area of work
               </h1>
             </legend>
             <span id="industry-hint" class="govuk-body">
