--- a/app/views/antigen/v1/global-registration/vaccine.html
+++ b/app/views/antigen/v1/global-registration/vaccine.html
@@ -25,13 +25,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/antigen/v1/action8/vaccine" method="post">
+      <form class="form" action="/antigen/{{version}}/action8/vaccine" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="vaccine-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-              {{ pageTitle }}
+                Has {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} had a coronavirus vaccine?
               </h1>
             </legend>
             <span id="vaccine-hint" class="govuk-body">
