--- a/app/views/antigen/v1/global-registration/when-did-symptoms-start-person-1.html
+++ b/app/views/antigen/v1/global-registration/when-did-symptoms-start-person-1.html
@@ -35,68 +35,68 @@
             </legend>
             <p class="govuk-body">
               <span id="symptoms-start-date-1-hint">
-                If they cannot remember the exact date, select the date they think it was roughly.
+                If they cannot remember the exact date, select the date they think it was.
               </span>
             </p>
 
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-person-1-1" name="date-of-onset-person-1" type="radio" value="31 March 2021" {{ checked("date-of-onset-person-1", "31 March 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-1">
-                  Wednesday, 31 March 2021
+                <input class="govuk-radios__input" id="date-of-onset-1-person-1" name="date-of-onset-person-1" type="radio" value="26 May 2021" {{ checked("date-of-onset-person-1", "26 May 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-1-person-1">
+                  Wednesday, 26 May 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-person-1-2" name="date-of-onset-person-1" type="radio" value="30 March 2021" {{ checked("date-of-onset-person-1", "30 March 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-2">
-                  Tuesday, 30 March 2021
+                <input class="govuk-radios__input" id="date-of-onset-2-person-1" name="date-of-onset-person-1" type="radio" value="25 May 2021" {{ checked("date-of-onset-person-1", "25 May 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-2-person-1">
+                  Tuesday, 25 May 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-person-1-3" name="date-of-onset-person-1" type="radio" value="29 March 2021" {{ checked("date-of-onset-person-1", "29 March 2021") }}>
-                <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-3">
-                  Monday, 29 March 2021
+                <input class="govuk-radios__input" id="date-of-onset-3-person-1" name="date-of-onset-person-1" type="radio" value="24 May 2021" {{ checked("date-of-onset-person-1", "24 May 2021") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-3-person-1">
+                  Monday, 24 May 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-4" name="date-of-onset-person-1" type="radio" value="28 March 2021" {{ checked("date-of-onset-person-1", "28 March 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-4">
-                Sunday, 28 March 2021
+              <input class="govuk-radios__input" id="date-of-onset-4-person-1" name="date-of-onset-person-1" type="radio" value="23 May 2021" {{ checked("date-of-onset-person-1", "23 May 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-4-person-1">
+                Sunday, 23 May 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-5" name="date-of-onset-person-1" type="radio" value="27 March 2021" {{ checked("date-of-onset-person-1", "27 March 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-5">
-                Saturday, 27 March 2021
+              <input class="govuk-radios__input" id="date-of-onset-5-person-1" name="date-of-onset-person-1" type="radio" value="22 May 2021" {{ checked("date-of-onset-person-1", "22 May 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-5-person-1">
+                Saturday, 22 May 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-6" name="date-of-onset-person-1" type="radio" value="26 March 2021" {{ checked("date-of-onset-person-1", "26 March 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-6">
-                Friday, 26 March 2021
+              <input class="govuk-radios__input" id="date-of-onset-6-person-1" name="date-of-onset-person-1" type="radio" value="21 May 2021" {{ checked("date-of-onset-person-1", "21 May 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-6-person-1">
+                Friday, 21 May 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-7" name="date-of-onset-person-1" type="radio" value="25 March 2021" {{ checked("date-of-onset-person-1", "25 March 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-7">
-                Thursday, 25 March 2021
+              <input class="govuk-radios__input" id="date-of-onset-7-person-1" name="date-of-onset-person-1" type="radio" value="20 May 2021" {{ checked("date-of-onset-person-1", "20 May 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-7-person-1">
+                Thursday, 20 May 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-8" name="date-of-onset-person-1" type="radio" value="24 March 2021" {{ checked("date-of-onset-person-1", "24 March 2021") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-8">
-                Thursday, 24 March 2021
+              <input class="govuk-radios__input" id="date-of-onset-8-person-1" name="date-of-onset-person-1" type="radio" value="19 May 2021" {{ checked("date-of-onset-person-1", "19 May 2021") }}>
+              <label class="govuk-label govuk-radios__label" for="date-of-onset-8-person-1">
+                Wednesday, 19 May 2021
               </label>
             </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-person-1-9" name="date-of-onset-person-1" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset-person-1", "different") }}>
-              <label class="govuk-label govuk-radios__label" for="date-of-onset-person-1-9">
-                Before 24 March 2021
-              </label>
-            </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="date-of-onset-9-person-1" name="date-of-onset-person-1" type="radio" value="different" data-aria-controls="conditional-date-of-onset" {{ checked("date-of-onset-person-1", "different") }}>
+                <label class="govuk-label govuk-radios__label" for="date-of-onset-9-person-1">
+                  Before 19 May 2021
+                </label>
+              </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-of-onset">
                 <span class="govuk-body"><strong>Enter the date symptoms started</strong></span>
-                <div class="govuk-date-input govuk-!-margin-top-4" id="symptoms-start-date">
+                <div class="govuk-date-input govuk-!-margin-top-4" id="symptoms-start-date-person-1">
                   <div class="govuk-date-input__item">
                     <div class="govuk-form-group">
                       <label class="govuk-label govuk-date-input__label" for="symptoms-start-date-day-person-1">
