--- a/app/views/antigen/v1/refer-and-triage/do-you-have-symptoms.html
+++ b/app/views/antigen/v1/refer-and-triage/do-you-have-symptoms.html
@@ -15,11 +15,11 @@
     </p>
   </div>
 
-<a class="govuk-back-link" href="/antigen/v1/refer-and-triage/essential-worker">Back</a>
+<a class="govuk-back-link" href="/antigen/{{version}}/refer-and-triage/status-page">Back</a>
 {% endblock %}
 
 {% block content %}
-{% include "includes/gtm-noscript.html" %}
+  {% include "includes/gtm-noscript.html" %}
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
