--- a/app/views/antigen/v2/global-registration/1-which-countries-travelled-to.html
+++ b/app/views/antigen/v2/global-registration/1-which-countries-travelled-to.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-<a class="govuk-back-link" href="/antigen/v2/global-registration/1-have-you-travelled-overseas">Back</a>
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -30,13 +30,13 @@
         </ul>
         <hr />
       </div>
-       <form action="/antigen/v2/global-registration/previous-infection" method="post">
+       <form action="/antigen/{{version}}/global-registration/previous-infection" method="post">
 
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                            {{ pageTitle }}
+                          Which country did {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} spend most time in?
                         </h1>
                     </legend>
                    <span id="last-country-visited-hint" class="govuk-body">
