--- a/app/views/antigen/v2/global-registration/address.html
+++ b/app/views/antigen/v2/global-registration/address.html
@@ -31,7 +31,7 @@
           <div id="content-1">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                Enter the postcode registered with the person's GP
+                Enter the postcode registered with {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s GP
               </h1>
             </legend>
     
@@ -49,7 +49,7 @@
           <div id="content-2" style="display: none;">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                Select the address registered with the person's GP
+                Select the address registered with {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s GP
               </h1>
             </legend>
     
