--- a/app/views/antigen/v2/global-registration/coronavirus-vaccine-date.html
+++ b/app/views/antigen/v2/global-registration/coronavirus-vaccine-date.html
@@ -29,8 +29,8 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="vaccine-date-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                {{ pageTitle }}
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                When did {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} have the vaccine?
               </h1>
             </legend>
             <span id="vaccine-date-hint" class="govuk-body">
