--- a/app/views/antigen/v2/global-registration/coronavirus-vaccine.html
+++ b/app/views/antigen/v2/global-registration/coronavirus-vaccine.html
@@ -15,10 +15,8 @@
     </p>
   </div> 
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/previous-infection">Back</a>
+
 {% endblock %}
 
 {% block content %}
@@ -30,10 +28,10 @@
       <form class="form" action="/antigen/{{version}}/action9/coronavirus-vaccine" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset govuk-!-margin-bottom-7" aria-describedby="vaccine-hint">
+          <fieldset class="govuk-fieldset" aria-describedby="vaccine-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
+                Has {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} had a coronavirus vaccine?
               </h1>
             </legend>
             <span id="vaccine-hint" class="govuk-body">
@@ -60,6 +58,8 @@
               </div>
             </div>  
           </fieldset>
+          </div>
+
           <button class="govuk-button" data-module="govuk-button">Continue</button>
         </div>
 
