--- a/app/views/antigen/v2/global-registration/country.html
+++ b/app/views/antigen/v2/global-registration/country.html
@@ -15,10 +15,11 @@
     </p>
   </div>
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  {% if data['vaccine'] !== "No" %}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/coronavirus-vaccine-date">Back</a>
+  {% else %}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/coronavirus-vaccine">Back</a>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -27,13 +28,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/global-registration/gp-address-same" method="post">
+      <form action="/antigen/{{version}}/global-registration/home-address" method="post">
       
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+                Where in the UK does {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} live?
               </h1>
             </legend>
             <div class="govuk-radios">
