--- a/app/views/antigen/v2/global-registration/currently-in-work.html
+++ b/app/views/antigen/v2/global-registration/currently-in-work.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="currently-in-work-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                {{ pageTitle }}
+                Does {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} travel to nursery, work or a place of education?
               </h1>
             </legend>
             <span id="currently-in-work-hint" class="govuk-body">
