--- a/app/views/antigen/v2/global-registration/ethnic-background-white.html
+++ b/app/views/antigen/v2/global-registration/ethnic-background-white.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="ethnic-background-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                {{ pageTitle }}
+                Which one best describes {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s ethnic background?
               </h1>
             </legend>
             <span id="ethnic-background-hint" class="govuk-body">
