--- a/app/views/antigen/v2/global-registration/ethnic-group.html
+++ b/app/views/antigen/v2/global-registration/ethnic-group.html
@@ -15,10 +15,7 @@
     </p>
   </div> 
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/gender">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -33,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="ethnic-group-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-                {{ pageTitle }}
+                What is {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s ethnic group?
               </h1>
             </legend>
             <span id="ethnic-group-hint" class="govuk-body">
