--- a/app/views/antigen/v2/global-registration/gender.html
+++ b/app/views/antigen/v2/global-registration/gender.html
@@ -15,10 +15,7 @@
     </p>
   </div> 
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/landline-number">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -32,8 +29,8 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="gender-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">
-                {{ pageTitle }}
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-7">
+                Which of the following is recorded on {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s medical record?
               </h1>
             </legend>
             <span id="gender-hint" class="govuk-body">
