--- a/app/views/antigen/v2/global-registration/index.html
+++ b/app/views/antigen/v2/global-registration/index.html
@@ -33,8 +33,8 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                {{ pageTitle }}
+              <h1 class="govuk-heading-xl govuk-!-margin-bottom-9">
+                What's {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or 'Smith' }}'s date of birth?
               </h1>
             </legend>
             <span id="date-of-birth-hint" class="govuk-hint">
@@ -68,6 +68,8 @@
             </div>
           </fieldset>
         </div>
+
+        <p class="govuk-body govuk-!-margin-bottom-7">If {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }} is aged 11 or under, their parent or guardian needs to swab test them.</p>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
