--- a/app/views/antigen/v2/global-registration/industry.html
+++ b/app/views/antigen/v2/global-registration/industry.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="industry-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
-                {{ pageTitle }}
+                Select {{ data['first-name'] or 'Pete' }} {{ data['last-name'] or "Smith" }}'s area of work
               </h1>
             </legend>
             <span id="industry-hint" class="govuk-body">
