--- a/app/views/antigen/v2/global-registration/institution.html
+++ b/app/views/antigen/v2/global-registration/institution.html
@@ -23,7 +23,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form lass="form" action="/genomic-variants/1-have-you-travelled-overseas" method="post">
+    <form lass="form" action="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas" method="post">
       <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper govuk-!-margin-bottom-8">
           <label class="govuk-label govuk-label--xl" for="institution">
@@ -37,7 +37,7 @@
           Name of the nursery, school or college
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="name" name="name" type="text" value="{{ data['name'] }}">
-        <label class="govuk-label">
+        <label class="govuk-label govuk-!-margin-top-3">
           Town
         </label>
         <input class="govuk-input govuk-!-width-two-thirds" id="town" name="town" type="text" value="{{ data['town'] }}">
@@ -49,7 +49,7 @@
       </button>
     </form>
 
-    <a class="govuk-link" href="/genomic-variants/1-have-you-travelled-overseas">Prefer not to say</a>
+    <a class="govuk-link" href="/antigen/{{version}}/global-registration/1-have-you-travelled-overseas">Prefer not to say</a>
 
   </div>
 </div>
