--- a/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation-email.html
@@ -10,42 +10,49 @@
     <div class="govuk-grid-column-two-thirds">
 
      <p class="govuk-body">
-        Dear {{ data['first-name'] | default('John') }},<br><br>
-        Your coronavirus home test will arrive within the next couple of days.<br>
+        Dear {{ data['first-name'] or 'Pete' }},<br><br>
+        Your coronavirus home test should arrive within 2 days.<br>
      </p>
 
      <div class="govuk-inset-text">
-        <h2 class="govuk-heading-m">Your 10-digit order ID is: 1123456789</h2>
+        <h2 class="govuk-heading-m">Important: Your 10 digit order ID is 1123456789</h2>
      </div>
 
-     <p class="govuk-body">Important - keep this order ID to hand, you'll need it later.</p>
+     <!-- <p class="govuk-body">Important - keep this order ID to hand, you'll need it later.</p> -->
 
      <h2 class="govuk-heading-m">What to do when you receive your test kit</h2>
 
      <ol class="govuk-list govuk-list--number">
-        <li>Read the instructions in your test kit carefully</li>
-        <li>Register your kit online so we know who to send the results to. The registration link is <a href="/antigen/{{version}}/home-testing/">https://gov.uk/register-home-test</a>.</li>
+        <li>Read the instructions carefully. There is also guidance online and in other formats such as Easy Read: <a href="#" class="govuk-link">https://www.gov.uk/government/publications/testing-for-coronavirus-at-home</a></li>
+        <li>Register your kit online, using your order ID at <a href="/antigen/{{version}}/home-testing/">https://gov.uk/register-home-test</a></li>
         <li>Take the test. Here is a helpful video: <a href="https://www.youtube.com/watch?v=zCqo7MhQT6U">https://www.youtube.com/watch?v=zCqo7MhQT6U</a></li>
-        <li>Follow the instructions on how to return the kit. It's very important you do this as close to when you take the test as possible.</li>
+        <li>Follow the instructions on how to return the kit</li>
      </ol>
 
-     <div class="govuk-warning-text govuk-!-margin-top-7">
+     <p class="govuk-body">Your kit may be different to the one in the video. Make sure you follow the instructions in your kit.</p>
+
+     <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text govuk-!-font-size-19">
         <span class="govuk-warning-text__assistive">Warning</span>
         If you have symptoms, you and everyone you live with should <a target="blank" class="govuk-link" href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">self-isolate</a> immediately and not leave home until you get your test results. You can leave home to get or post a test.
       </strong>
-    </div>
+    </div> -->
 
-     <h2 class="govuk-heading-m">How different ages should do the test</h2>
+     <h2 class="govuk-heading-m">Read the test kit instructions for how to test people of different ages</h2>
 
-     <ul class="govuk-list govuk-list--bullet">
+     <h2 class="govuk-heading-m">Instructions in alternative formats</h2>
+     <p class="govuk-body">
+      Royal National Institute of Blind People (RNIB) can send you braille, audio or large print instructions. <a class="govuk-link" href="#">Order online</a> or call 0303 123 9999 (Monday to Friday 8am to 8pm and Saturday 9am to 1pm).
+    </p>
+
+     <!-- <ul class="govuk-list govuk-list--bullet">
         <li>18+ years old - do the test on yourself (unless unable to do so)</li>
         <li>12 to 17 years old - do the test on themselves with adult supervision</li>
         <li>11 years and under - an adult should do the test on the child</li>
      </ul>
 
-     <p class="govuk-body">Testing is available for children of all ages.</p>
+     <p class="govuk-body">Testing is available for children of all ages.</p> -->
 
      <h2 class="govuk-heading-m">If you're worried</h2>
 
@@ -53,22 +60,24 @@
 
      <h2 class="govuk-heading-m">Call 111 if you're worried about a baby or child. Call 999 if the baby or child seems very unwell, is getting worse, or you think there's something seriously wrong.</h2>
 
-     <h2 class="govuk-heading-m">Getting the results</h2>
+     <h2 class="govuk-heading-m">Test results</h2>
 
-     <p class="govuk-body">We'll send your test results to you by text and email using the contact details you've provided.</p>
-     <p class="govuk-body">If you test positive for coronavirus, we'll get in touch to find out who you may have come into contact with. We'll then contact them confidentially to tell them to self-isolate. This is called contact tracing and will help to protect you and others.</p>
+     <p class="govuk-body">We'll send your test results to you by text and email. If you have symptoms, you must self-isolate until you get your results. If you do not have symptoms, follow the latest government guidance at <a class="govuk-link" href="#">https://www.gov.uk/coronavirus</a> until you get your results.</p>
+     <p class="govuk-body">
+      If you test positive for coronavirus, we'll call you to find out who you may have come into contact with. We'll then contact them confidentially to tell them to self-isolate.<br><br>
+      If you have the NHS COVID-19 app and agree for it to anonymously alert anyone you've been in close contact with, the app will also tell them to self-isolate. To find out more visit <a class="govuk-link" href="#">https://covid19.nhs.uk</a>
+    </p>
+
+      <h2 class="govuk-heading-m">Antibody testing</h2>
+      <p class="govuk-body">If you agreed to do antibody testing, you will receive your 1st test kit in the post 2-3 days after you get a positive coronavirus result. Your 2nd antibody test kit will arrive 3 weeks later. The kit contains clear instructions on how to do the test. It's important that you do the test and post it back <strong>as soon as possible</strong>. <a class="govuk-link" target="blank" href="#">Find more info on how to prepare for, take and return the antibody test</a>.</p>
 
      <h2 class="govuk-heading-m">Getting help</h2>
 
-     <p class="govuk-body">If you have any problems, call the helpline:</p>
+     <p class="govuk-body">If you have any problems, call the helpline (open from 7am to 11pm):</p>
      <ul class="govuk-list govuk-list--bullet">
         <li>England, Wales and Northern Ireland - call 119 (free from mobiles and landlines)</li>
         <li>Scotland - call 0300 303 2713 (charged at your standard network rate)</li>
       </ul>
-
-      <p class="govuk-body">The helpline is open from 7am to 11pm.</p>
-
-      <p class="govuk-body">Thank you.</p>
 
     </div>
   </div>
@@ -76,9 +85,9 @@
 {% endblock %}
 
 {% block bodyEnd %}
-<div class="proto-action" style="width: 140px">
-  <a href="/antigen/{{version}}/home-testing/agnostic-instructions">
-    <div class="proto-action-text govuk-!-margin-left-3">Read instructions</div>
+<div class="proto-action big">
+  <a href="/antigen/{{version}}/order-home-test-kit/sms-messages/01-test-result-1">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">SMS - PCR test result</div>
   </a>
 </div>
 {% endblock %}
